--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f8f8f8;
+	text-align:center;
+}
+.book-library{
+	border-top:1px solid black;
+	padding:20px;
+	margin:20px;
+	border-bottom:20px solid white;
+}
+.bname{
+	text-align:left;
+	text-style:bold;
+	font-weight:600;
+}
+.author{
+	color:#777777;
+	text-align:left;
+	line-height:0px;
+}
+.price{
+	background-color:#2ecc71;
+	padding:10px;
+	border-bottom:20px solid white;
+	margin:10px;
+}
+img{
+	margin:10px;
+}
